UHF-6046: Desktop menu raw but working. Z-index issues need to be fixed'

--- a/src/scss/06_components/block/_header-language-links.scss
+++ b/src/scss/06_components/block/_header-language-links.scss
@@ -6,12 +6,11 @@ $-mmenu-border-color: $color-black-20;
 $-transition-duration: 0.2s;
 $-back-icon-bg-size: 40px;
 $-back-icon-size: $spacing-double;
-$-itemlink-target-size: $spacing-quadruple;
-$-footerlink-target-size: 44px;
 
 
 /* new stuff*/
 $-panel-height:100vh;
+$-panel-desktop-width: 243px;
 
 .block__headerlanguagelinks {
   align-self: stretch;
@@ -29,13 +28,11 @@ $-panel-height:100vh;
   z-index: 0;
 
   @include breakpoint($breakpoint-m) {
-
     background-color: transparent;
-    border-bottom: 0 none;
-    border-top: none;
+    border:0;
     margin-left: auto;
     order: 2;
-    padding: 0;
+    padding: 0 $spacing 0 $spacing-half;
     width: auto;
   }
 
@@ -65,8 +62,11 @@ $-panel-height:100vh;
     @include hover-link-arrow-transition;
     content:'';
     grid-area: icon;
+
+    
     // margin-top: 0.5 * ($-back-icon-bg-size - $-back-icon-size);
   }
+  
 
 }
 
@@ -92,7 +92,7 @@ $-panel-height:100vh;
 }
 
 .headerlanguagelinks__wrapper {
-  background-color: $color-silver;
+  background-color: $color-silver-medium-light;
   grid-area:menu;
   height:$-panel-height;
   left:0;
@@ -103,7 +103,25 @@ $-panel-height:100vh;
   padding: $spacing-double $spacing;
   position: absolute;
 
+  @include breakpoint($breakpoint-m) {
+    border: 1px solid $color-black-20;
+    bottom:auto;
+    grid-area:otherlangs;
+    height:auto;
+    left:auto;
+    max-width: $-panel-desktop-width;
+    min-width:auto;
+    position: absolute;
+    right:80px;
+    top:auto;
+    top:133px; // todo see if this can be calculated
+    width: $-panel-desktop-width;
 }
+
+
+}
+
+
 
 .headerlanguagelinks__wrapper,
 .headerlanguagelinks__toggle--close {
@@ -116,6 +134,10 @@ $-panel-height:100vh;
 }
 
 #morelangs:target  {
+  // TODO ensure this does not break anything else. 
+  & + .wrapper {
+    position:relative;
+  }
 
   & ~ * .headerlanguagelinks__wrapper {
     display:block;
@@ -130,6 +152,11 @@ $-panel-height:100vh;
   }
 }
 
+.headerlanguagelinks__group {
+margin-bottom: $spacing;
+
+}
+
 .headerlanguagelinks__link {
   display:block;
   margin-bottom: $spacing-half;
@@ -138,7 +165,7 @@ $-panel-height:100vh;
 
 .headerlanguagelinks__link--nolink {
   display:block;
-  font-weight:bold;
+  font-weight:500;
 }
 
 .headerlanguagelinks__link[data-is-external="true"] {
